@@ -33,11 +33,12 @@
 #include <NVCtrl/NVCtrlLib.h>
 
 typedef enum _QUERY_ID {
-	NV_TEMP = NV_CTRL_GPU_CORE_TEMPERATURE,
-	NV_TEMP_THRESHOLD = NV_CTRL_GPU_CORE_THRESHOLD,
-	NV_GPU_FREQ = NV_CTRL_GPU_CURRENT_CLOCK_FREQS,
-	NV_MEM_FREQ = NV_CTRL_GPU_CURRENT_CLOCK_FREQS,
-	NV_IMAGE_QUALITY = NV_CTRL_IMAGE_SETTINGS
+	NV_TEMP,
+	NV_TEMP_THRESHOLD,
+	NV_TEMP_AMBIENT,
+	NV_GPU_FREQ,
+	NV_MEM_FREQ,
+	NV_IMAGE_QUALITY
 } QUERY_ID;
 
 struct nvidia_s {
