@@ -12,6 +12,7 @@
 		* fix number printing in human_readable()
 		* network $upspeed and $downspeed now use human_readable()
 	* Fix diskio_read/write patch sf.net id #2493084 (thanks Alexander)
+	* Fix nvidia memory frequency reading patch sf.net id #2493134
 
 2009-02-15
 	* Added out_to_x
